# vcopy

./: .gitignore  CMakeLists.txt  README.md
docs/vcopy/: Design Notes.md  TODO - Features.md
docs/vcopy/.obsidian/: workspace.json
include/eternal_timestamp/: lib1-pub-header.h
include/vcopy/: vcopy.h
src/: CMakeLists.txt  lib1-priv-header.h  lib1-priv-impl.cpp  lib1-pub-impl.cpp  vcopy-impl.cpp  vcopy-priv.h  vcopy-utils.cpp
test/: CMakeLists.txt  main.cpp  monolithic-main.c  monolithic_examples.h  test.c  testpp.cpp  unittests.cpp
tool/: CMakeLists.txt  main.cpp
